--- a/spring-boot-security-demo/src/main/resources/application.yml
+++ b/spring-boot-security-demo/src/main/resources/application.yml
@@ -17,3 +17,6 @@ spring:
 logging:
     level:
         org.hibernate.engine.jdbc.env.internal.LobCreatorBuilderImpl: ERROR
+        org.springframework.security: DEBUG
+
+    
