--- a/shiro-security/src/main/resources/application-prod.yml
+++ b/shiro-security/src/main/resources/application-prod.yml
@@ -14,6 +14,9 @@ spring:
         password: postgres
         driver-class-name: org.postgresql.Driver
         
+shiro:
+  loginUrl: /account/login
+
 logging:
     level:
         org.hibernate.engine.jdbc.env.internal.LobCreatorBuilderImpl: ERROR
