--- a/shiro-security/src/main/resources/application-test.yml
+++ b/shiro-security/src/main/resources/application-test.yml
@@ -13,6 +13,9 @@ spring:
         username: postgres
         password: postgres
         driver-class-name: org.postgresql.Driver
+
+shiro:
+  loginUrl: /account/login
         
 logging:
     level:
